--- a/package.json
+++ b/package.json
@@ -15,8 +15,7 @@
     "build": "webpack -p",
     "build:dev": "webpack",
     "build:watch": "yarn run build:dev -- --watch",
-    "build:pages": "yarn run esdoc && webpack -p --env.pages",
-    "preesdoc": "rimraf docs/esdoc",
+    "preesdoc": "rimraf docs",
     "esdoc": "esdoc",
     "lint": "eslint .",
     "lint-staged": "lint-staged",
