Set up acceptance testing
Fix Travis config

Use babel-polyfill for acceptance testing

Add tests

--amend

--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "lint": "eslint .",
     "lint-staged": "lint-staged",
     "spellcheck": "yaspeller-ci *.md",
-    "test": "jest && yarn run lint && yarn run spellcheck",
-    "test:unit": "jest --coverage",
-    "test:watch": "jest --watch"
+    "test": "yarn run test:unit && yarn run test:acceptance && yarn run lint && yarn run spellcheck",
+    "test:acceptance": "karma start",
+    "test:acceptance:watch": "WATCH=true yarn run test:acceptance -- --no-single-run",
+    "test:unit": "jest test/unit",
+    "test:unit:watch": "yarn run test:unit -- --watch"
   },
   "lint-staged": {
     "*.js": "eslint",
@@ -42,6 +44,7 @@
     "babel-core": "^6.23.1",
     "babel-eslint": "^7.1.1",
     "babel-loader": "^6.3.2",
+    "babel-polyfill": "^6.23.0",
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-react": "^6.23.0",
     "babel-preset-stage-0": "^6.22.0",
@@ -56,7 +59,14 @@
     "eslint-plugin-promise": "^3.5.0",
     "eslint-plugin-react": "^6.10.0",
     "eslint-plugin-standard": "^2.1.1",
+    "jasmine-core": "^2.5.2",
     "jest": "^19.0.2",
+    "karma": "^1.5.0",
+    "karma-chrome-launcher": "^2.0.0",
+    "karma-firefox-launcher": "^1.0.1",
+    "karma-jasmine": "^1.1.0",
+    "karma-sourcemap-loader": "^0.3.7",
+    "karma-webpack": "^2.0.2",
     "lint-staged": "^3.3.1",
     "pre-commit": "^1.2.2",
     "react-addons-test-utils": "^15.4.2",
