--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,6 +2,7 @@
   "parser": "babel-eslint",
   "extends": ["standard", "standard-react"],
   "env": {
+    "jasmine": true,
     "jest": true,
     "browser": true
   },
