--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,10 @@ node_js:
   - '7'
 cache: yarn
 
+branches:
+  only:
+    - master
+
 # Start X for acceptance testing
 before_install:
   - "export DISPLAY=:99.0"
