--- a/package.json
+++ b/package.json
@@ -31,8 +31,8 @@
     "lint-staged": "lint-staged",
     "spellcheck": "yaspeller-ci *.md",
     "test": "yarn run test:unit && yarn run test:acceptance && yarn run lint && yarn run spellcheck",
-    "test:acceptance": "karma start",
-    "test:acceptance:watch": "WATCH=true yarn run test:acceptance -- --no-single-run",
+    "test:acceptance": "NODE_ENV=production karma start",
+    "test:acceptance:watch": "NODE_ENV=production WATCH=true yarn run test:acceptance -- --no-single-run",
     "test:unit": "jest",
     "test:unit:watch": "yarn run test:unit -- --watch --coverage"
   },
@@ -58,10 +58,11 @@
     "babel-core": "^6.23.1",
     "babel-eslint": "^7.1.1",
     "babel-loader": "^6.3.2",
+    "babel-plugin-transform-class-properties": "^6.23.0",
+    "babel-plugin-transform-object-rest-spread": "^6.23.0",
     "babel-polyfill": "^6.23.0",
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-react": "^6.23.0",
-    "babel-preset-stage-0": "^6.22.0",
     "enzyme": "^2.7.1",
     "enzyme-to-json": "^1.5.0",
     "esdoc": "^0.5.2",
