Set NODE_ENV to production for CI

--- a/package.json
+++ b/package.json
@@ -31,8 +31,8 @@
     "lint-staged": "lint-staged",
     "spellcheck": "yaspeller-ci *.md",
     "test": "yarn run test:unit && yarn run test:acceptance && yarn run lint && yarn run spellcheck",
-    "test:acceptance": "NODE_ENV=production karma start",
-    "test:acceptance:watch": "NODE_ENV=production WATCH=true yarn run test:acceptance -- --no-single-run",
+    "test:acceptance": "karma start",
+    "test:acceptance:watch": "WATCH=true yarn run test:acceptance -- --no-single-run",
     "test:unit": "jest",
     "test:unit:watch": "yarn run test:unit -- --watch --coverage"
   },
