--- a/.travis.yml
+++ b/.travis.yml
@@ -13,3 +13,6 @@ branches:
 before_install:
   - "export DISPLAY=:99.0"
   - "sh -e /etc/init.d/xvfb start"
+
+before_script:
+  - "export NODE_ENV=production"
