--- a/circle.yml
+++ b/circle.yml
@@ -11,4 +11,6 @@ dependencies:
 
 test:
   override:
-    - yarn run test
+    - yarn run test:
+        environment:
+          NODE_ENV: production
