Import PropTypes from 'prop-types' package; move React and ReactDOM to peer dependencies

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,5 +3,8 @@
   "extends": ["standard", "standard-react"],
   "env": {
     "browser": true
+  },
+  "rules": {
+    "react/no-unused-prop-types": "off"
   }
 }
