--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
     "time",
     "animated"
   ],
-  "dependencies": {
-    "react": "^15.4.2",
-    "react-dom": "^15.4.2"
+  "peerDependencies": {
+    "react": "^15.5.4",
+    "react-dom": "^15.5.4"
   },
   "scripts": {
     "prepublishOnly": "yarn run test && yarn run build",
@@ -63,8 +63,8 @@
     "babel-polyfill": "^6.23.0",
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-react": "^6.23.0",
-    "enzyme": "^2.7.1",
-    "enzyme-to-json": "^1.5.0",
+    "enzyme": "^2.8.2",
+    "enzyme-to-json": "^1.5.1",
     "esdoc": "^0.5.2",
     "eslint": "^3.17.0",
     "eslint-config-react": "^1.1.7",
@@ -86,7 +86,10 @@
     "karma-webpack": "^2.0.2",
     "lint-staged": "^3.3.1",
     "pre-commit": "^1.2.2",
-    "react-addons-test-utils": "^15.4.2",
+    "prop-types": "^15.5.8",
+    "react": "^15.5.4",
+    "react-addons-test-utils": "^15.5.1",
+    "react-dom": "^15.5.4",
     "rimraf": "^2.6.1",
     "webpack": "^2.2.1",
     "yaspeller-ci": "^0.1.0"
