--- a/.babelrc
+++ b/.babelrc
@@ -5,6 +5,9 @@
   ],
   "plugins": [
     "transform-object-rest-spread",
-    "transform-class-properties"
+    "transform-class-properties",
+    ["transform-react-remove-prop-types", {
+      "removeImport": true
+    }]
   ]
 }
