--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,10 +1,14 @@
 {
   "parser": "babel-eslint",
-  "extends": ["standard", "standard-react"],
+  "extends": [
+    "umbrellio"
+  ],
   "env": {
-    "browser": true
+    "browser": true,
+    "node": true
   },
   "rules": {
-    "react/no-unused-prop-types": "off"
+    "react/no-unused-prop-types": "off",
+    "newline-per-chained-call": "off"
   }
 }
