--- a/package.json
+++ b/package.json
@@ -37,7 +37,11 @@
     "test:unit:watch": "yarn run test:unit -- --watch --coverage"
   },
   "lint-staged": {
-    "*.js": "eslint",
+    "*.js": [
+      "prettier --write --no-semi",
+      "eslint --fix",
+      "git add"
+    ],
     "*.md": "yaspeller-ci"
   },
   "pre-commit": [
@@ -72,9 +76,16 @@
     "eslint-config-react": "^1.1.7",
     "eslint-config-standard": "^7.0.0",
     "eslint-config-standard-react": "^4.2.0",
+    "eslint-config-umbrellio": "^0.3.3",
+    "eslint-plugin-curry": "^0.1.0",
+    "eslint-plugin-flowtype": "^2.32.1",
+    "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-jest": "^19.0.1",
+    "eslint-plugin-jsx-a11y": "^4.0.0",
+    "eslint-plugin-node": "^4.2.2",
+    "eslint-plugin-prefer-object-spread": "^1.2.1",
     "eslint-plugin-promise": "^3.5.0",
-    "eslint-plugin-react": "^6.10.0",
+    "eslint-plugin-react": "^6.10.3",
     "eslint-plugin-standard": "^2.1.1",
     "jasmine-core": "^2.5.2",
     "jest": "^19.0.2",
@@ -88,6 +99,7 @@
     "karma-webpack": "^2.0.2",
     "lint-staged": "^3.3.1",
     "pre-commit": "^1.2.2",
+    "prettier": "^1.3.1",
     "prop-types": "^15.5.8",
     "react": "^15.5.4",
     "react-addons-test-utils": "^15.5.1",
