Allow React 16 in package dependencies

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rollex",
-  "version": "1.0.0-rc.6",
+  "version": "1.0.0-rc.7",
   "description": "A counter React component",
   "main": "lib/index.js",
   "repository": "umbrellio/rollex",
@@ -14,8 +14,8 @@
     "animated"
   ],
   "peerDependencies": {
-    "react": "^15.5.4",
-    "react-dom": "^15.5.4"
+    "react": ">= 15.5.4",
+    "react-dom": ">= 15.5.4"
   },
   "scripts": {
     "prepublishOnly": "yarn run test && yarn run build",
